[feature] Add CI/CD pipeline and production setup for automated deployments
- Introduce `.github/workflows/deploy.yml` for building, testing, and deploying from `main` branch.
- Add `vps-setup.sh` for provisioning Ubuntu-based VPS, with Java 25 setup and secure `sfb` service.
- Update `README.md` with deployment instructions, secrets configuration, and VPS guide.
- Configure `maven-shade-plugin` for creating deployable fat JARs.